name:                git-stats
version:             1.0.0.0
synopsis:            Print a summary of the contributors of a repository from the command line
-- description:
homepage:            https://github.com/ajscholl/git-stats
license:             BSD3
license-file:        LICENSE
author:              Anselm Jonas Scholl
maintainer:          jonas.scholl@lingumatiker.de
copyright:           (c) 2019 Anselm Jonas Scholl
category:            System
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

executable git-stats
  main-is:             Main.hs
  build-depends:
    base >=4.12 && < 5,
    filepath >= 1.4.2.1 && < 1.5,
    process >= 1.6.3.0 && < 1.7,
    directory >= 1.3.3.0 && < 1.4,
    containers >= 0.6.0.1 && < 0.7
  hs-source-dirs:      src
  ghc-options:         -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction -fwarn-incomplete-uni-patterns
  default-language:    Haskell2010
